# csv-schema-validator

./: README.md  main.py  pyproject.toml
src/csv_schema_validator/: __init__.py  cli.py  monitoring_schemas.py  schemas.py  test_runner.py  validators.py
src/csv_schema_validator/integrations/: __init__.py  ci_cd.py  monitoring.py  scrapers.py
